# Pipeline-Test

./: CMakeLists.txt  README.md  develop merge to main.sh  main.cpp  test.cpp
.github/workflows/: cpp-gtest-ci.yml
